--- a/cart.html
+++ b/cart.html
@@ -77,14 +77,14 @@
             <img src="./images/pic1.jpg" alt="">
             <div>
               <p>Boy’s T-Shirt</p>
-              <span>Price: $50.00</span>
+              <span>Price: RS.500.00</span>
               <br />
               <a href="#">remove</a>
             </div>
           </div>
         </td>
         <td><input type="number" value="1" min="1"></td>
-        <td>$50.00</td>
+        <td>Rs.500.00</td>
       </tr>
       <tr>
         <td>
@@ -92,14 +92,14 @@
             <img src="./images/pic2.jpg" alt="">
             <div>
               <p>Boy’s T-Shirt</p>
-              <span>Price: $90.00</span>
+              <span>Price: Rs.900.00</span>
               <br />
               <a href="#">remove</a>
             </div>
           </div>
         </td>
         <td><input type="number" value="1" min="1"></td>
-        <td>$90.00</td>
+        <td>Rs.900.00</td>
       </tr>
       <tr>
         <td>
@@ -107,14 +107,14 @@
             <img src="./images/pic3.jpg" alt="">
             <div>
               <p>Boy’s T-Shirt</p>
-              <span>Price: $60.00</span>
+              <span>Price: Rs.600.00</span>
               <br />
               <a href="#">remove</a>
             </div>
           </div>
         </td>
         <td><input type="number" value="1" min="1"></td>
-        <td>$60.00</td>
+        <td>Rs.600.00</td>
       </tr>
       <tr>
         <td>
@@ -122,14 +122,14 @@
             <img src="./images/pic4.jpg" alt="">
             <div>
               <p>Boy’s T-Shirt</p>
-              <span>Price: $60.00</span>
+              <span>Price: Rs.600.00</span>
               <br />
               <a href="#">remove</a>
             </div>
           </div>
         </td>
         <td><input type="number" value="1" min="1"></td>
-        <td>$60.00</td>
+        <td>Rs.600.00</td>
       </tr>
       <tr>
         <td>
@@ -137,14 +137,14 @@
             <img src="./images/pic5.jpg" alt="">
             <div>
               <p>Boy’s T-Shirt</p>
-              <span>Price: $60.00</span>
+              <span>Price: Rs.600.00</span>
               <br />
               <a href="#">remove</a>
             </div>
           </div>
         </td>
         <td><input type="number" value="1" min="1"></td>
-        <td>$60.00</td>
+        <td>Rs.600.00</td>
       </tr>
     </table>
 
@@ -152,15 +152,15 @@
       <table>
         <tr>
           <td>Subtotal</td>
-          <td>$200</td>
+          <td>Rs.200</td>
         </tr>
         <tr>
           <td>Tax</td>
-          <td>$50</td>
+          <td>Rs.50</td>
         </tr>
         <tr>
           <td>Total</td>
-          <td>$250</td>
+          <td>Rs.250</td>
         </tr>
       </table>
       <a href="#" class="checkout btn">Proceed To Checkout</a>
